hotfix: Правки в тестах, для сортировки массива