@@ -1,6 +1,8 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
+
+import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.is;
@@ -25,7 +27,7 @@ public class DepartmentsTest {
 
 	@Test
 	public void whenSortAsc() {
-		List<String> input = List.of("k1/sk2", "k1", "k1/sk1", "k1/sk1/ssk1", "k2");
+		List<String> input = Arrays.asList("k1/sk2", "k1", "k1/sk1", "k1/sk1/ssk1", "k2");
 		List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk2", "k2");
 		Departments.sortAsc(input);
 		assertThat(input, is(expect));
@@ -33,7 +35,7 @@ public class DepartmentsTest {
 
 	@Test
 	public void whenSortDesc() {
-		List<String> input = List.of("k1/sk2", "k1", "k1/sk1", "k1/sk1/ssk1", "k2");
+		List<String> input = Arrays.asList("k1/sk2", "k1", "k1/sk1", "k1/sk1/ssk1", "k2");
 		List<String> expect = List.of("k2", "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk2");
 		Departments.sortDesc(input);
 		assertThat(input, is(expect));
